smartemission/services/heron/deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: heron-deployment
  namespace: smartemission
  labels:
    app: heron
spec:
  replicas: 2
  selector:
    matchLabels:
      app: heron
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: heron
    spec:
      containers:
      - name: heron
        image: smartemission/se-heron:1.0.1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        ports:
        - containerPort: 80
