smartemission/services/heron/service.yml
apiVersion: v1
kind: Service
metadata:
  name: heron-service
  namespace: smartemission
  labels:
    app: heron
spec:
  ports:
  - port: 80
  selector:
    app: heron
