smartemission/services/heron/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: heron
  namespace: smartemission
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Script-Name /heron;
spec:
  rules:
  - host: pdok.smartemission.nl
    http:
      paths:
      - path: /heron
        backend:
          serviceName: heron-service
          servicePort: 80
